flicker fix test

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -32,7 +32,7 @@ code {
     background-color:#282C34;
 }
 
-.navbar-menu {
+.navbar-menu, navbar, footer {
     background-color: #222F3E;
 }
 
